--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ backend/**/*.rs.bk
 # Remove Cargo.lock when creating an executable, leave it for libraries
 # More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
 backend/Cargo.lock
+
+frontend/node_modules/
+.DS_Store
