--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ backend/**/*.rs.bk
 # Remove Cargo.lock when creating an executable, leave it for libraries
 # More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
 backend/Cargo.lock
+
+**/*.DS_Store
