--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,7 @@
     ],
     "paths": {
       "@/*": ["./*"],
+      "@contract": ["lib/contract/index.ts"],
       "@contract/*": ["lib/contract/*"]
     }
   },
