--- a/contracts/cards/.gitignore
+++ b/contracts/cards/.gitignore
@@ -1,11 +1,9 @@
 # Ignore build artifacts from the local tests sub-crate.
-contracts/**/target/
+/target/
 
 # Ignore backup files creates by cargo fmt.
-contracts/**/*.rs.bk
+**/*.rs.bk
 
 # Remove Cargo.lock when creating an executable, leave it for libraries
 # More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
-contracts/**/Cargo.lock
-
-**/*.DS_Store
+Cargo.lock
