--- a/contracts/shared/Cargo.toml
+++ b/contracts/shared/Cargo.toml
@@ -8,6 +8,9 @@ ink = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.4", version 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
+[lib]
+path = "lib.rs"
+
 [features]
 default = ["std"]
 std = [
